--- a/public/bank_account_styles.css
+++ b/public/bank_account_styles.css
@@ -81,3 +81,14 @@ button:focus {
   outline: none;
   box-shadow: 0 0 10px 2px rgba(253, 185, 19, 0.2);
 }
+
+#balance-container {
+  border: none;
+  padding: 15px 20px;
+  border-radius: 25px;
+  background: rgba(229, 199, 139, 0.1);
+}
+
+#total-balance {
+  color: #FDB913;
+}
