--- a/public/styles.css
+++ b/public/styles.css
@@ -8,7 +8,10 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  font-family: 'Roboto', sans-serif;
 }
+
+
 
 header {
   background-color: #000000;
